syntax = "proto3";

package public_scratchpad;

import "scratchpad.proto";

service PublicScratchpadService {
  rpc CreatePublicScratchpad(CreatePublicScratchpadRequest) returns (PublicScratchpadResponse);
  rpc UpdatePublicScratchpad(UpdatePublicScratchpadRequest) returns (PublicScratchpadResponse);
  rpc GetPublicScratchpad(GetPublicScratchpadRequest) returns (PublicScratchpadResponse);
}

message CreatePublicScratchpadRequest {
  string name = 1;
  scratchpad_proto.Scratchpad scratchpad = 2;
  optional string cache_only = 3;
}

message UpdatePublicScratchpadRequest {
  string address = 1;
  string name = 2;
  scratchpad_proto.Scratchpad scratchpad = 3;
  optional string cache_only = 4;
}

message GetPublicScratchpadRequest {
  string address = 1;
}

message PublicScratchpadResponse {
  scratchpad_proto.Scratchpad scratchpad = 1;
}
